# ruc-dnit

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  MEJORAS_IMPLEMENTADAS.md  QWEN.md  README.md  api.ini  config.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  api.py  downloader.py  main.py  test_downloader.py
